--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="473.0" prefWidth="428.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.PremierLeague.FXMLController">
+<BorderPane prefHeight="473.0" prefWidth="428.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.PremierLeague.FXMLController">
    <top>
       <Label text="Simulazione d'esame 03/06/2020" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -39,7 +39,7 @@
                         <Insets right="20.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnTopPlayer" mnemonicParsing="false" onAction="#doTopPlayer" prefWidth="200.0" text="Top Player" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Button fx:id="btnTopPlayer" disable="true" mnemonicParsing="false" onAction="#doTopPlayer" prefWidth="200.0" text="Top Player" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets right="20.0" />
                      </GridPane.margin>
